--- a/src/styles/components/spin.css
+++ b/src/styles/components/spin.css
@@ -1,5 +1,9 @@
 @import 'constants/index.css';
 
+/* ============================================= */
+/* Spin Styles */
+/* ============================================= */
+
 .spin {
   animation: spin 1s linear infinite;
 }
